Fix banner not being trasparent and dimm graphic when used with dark mode

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -230,6 +230,9 @@ section {
 
 .imagebanner {
   background: url(/img/banner.svgz) no-repeat center bottom;
+  @media (prefers-color-scheme: dark) {
+    filter: brightness(70%);
+  }
   background-size: cover;
   color: rgba(0, 0, 0, 0.5);
   min-height: 500px;
